test/1.2/errors/T_EASSIGN_21.dml
/*
  © 2021-2023 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.2;
device eassign;

// bug 5090
method init {
    local int i;
    /// ERROR EASSIGN
    i * 1 = 5;
}
